[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
serde_bytes = "0.11" # Optimization for handling raw bytes

# Error Handling
thiserror = "1.0"
anyhow = "1.0" # Good for the main application loop, use thiserror for libs

# Cryptography (For Deterministic Replay Hash)
sha2 = "0.10"
hex = "0.4"

# Benchmarking (Dev dependency)
[dev-dependencies]
criterion = "0.5"

# Profile optimizations for release
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"